# brew-graph

./: .gitignore  Makefile  README.md  brew-graph.cabal  dontCheck_haphviz.patch  script.hs  shell.nix  stack.yaml
app/: Main.hs
src/Data/Homebrew/: Graph.hs
src/Data/Homebrew/Graph/: DOT.hs  Parsers.hs  Types.hs
