name:                brew-graph
version:             0.1.0.0
synopsis:            Visualize Homebrew dependencies
description:         Please see README.md
homepage:            https://github.com/yurrriq/brew-graph
license:             BSD3
license-file:        LICENSE
author:              Eric Bailey
maintainer:          eric@ericb.me
copyright:           Copyright: (c) 2016 Eric Bailey
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Homebrew.Graph
                     , Data.Homebrew.Graph.Parsers
                     , Data.Homebrew.Graph.Types
  build-depends:       base >= 4.7 && < 5
                     , graphviz >= 2999.18.1 && < 2999.19
                     , optparse-applicative >= 0.13.0 && < 0.14
                     , process >= 1.4.2 && < 1.5
  default-language:    Haskell2010

executable brew-graph
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brew-graph
                     , graphviz
                     , optparse-applicative
                     , process
  default-language:    Haskell2010

-- test-suite brew-graph-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , brew-graph
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yurrriq/brew-graph
